fix: the :has css selector doesnt work on Firefox, so had to use a class to change the checked FormFields components

--- a/src/components/FormColumn/style.css
+++ b/src/components/FormColumn/style.css
@@ -20,8 +20,8 @@
     cursor: pointer;
 }
 
-.form-field .input-icon:has(:checked) label,
-.form-field .input-color:has(:checked) label {
+.form-field .input-icon.checked label,
+.form-field .input-color.checked label {
     background-color: var(--color-primary-light);
 }
 
